<resources>
    <string name="app_name">NotePro</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="default_firebase_client_id" translatable="false">705621164183-mhjmai0u24f57m2cf3b1rljjslf4989n.apps.googleusercontent.com</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="search_here">Search here...</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">Welcome!</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="members">Members</string>
    <string name="save">Save</string>
    <string name="create_note">Create note</string>
    <string name="pinned">Pinned</string>
    <string name="unpin">Unpin</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="images">Images</string>
    <string name="today">Today</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="others">Others</string>
    <string name="logout">Logout</string>
    <string name="note_details">Note details</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="add">Add</string>
    <string name="pin">Pin</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="update">Update</string>
    <string name="id" translatable="false">Id</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="check_your_email">Check your email</string>
    <string name="we_have_sent_a_password_recover_instructions_to_your_email">We have sent a password recover instructions to your email.</string>
    <string name="open_email_app">Open email app</string>
    <string name="did_not_receive_the_email_check_your_spam_filter">Did not receive the email? Check your spam filter,</string>
    <string name="or">or</string>
    <string name="try_another_email_address">try another email address</string>
    <string name="skip_i_ll_confirm_later">Skip, I\'ll confirm later</string>
    <string name="your_info">Your info</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords.</string>

    <string name="all_input_required">All input required.</string>
    <string name="this_text_is_not_email_type">This text is not email type.</string>
    <string name="phone_number">Phone number</string>
    <string name="password_not_match">Password not match.</string>
    <string name="role">Role</string>
    <string name="select">Select</string>
    <string name="loading">Loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_member">Add member</string>
    <string name="remove">Remove</string>
    <string name="enter_code_received_via_email">Enter code received via email</string>
    <string name="password_check">Password must have length between 8 and 32!</string>
    <string name="invalid_full_name">Invalid full name!</string>
    <string name="phone_number_check">Phone number must have 10 digits!</string>
    <string name="code_check">Code must not be empty!</string>
    <string name="conservation">Conservation</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="dashboard">Dashboard</string>
    <string name="incoming_call">Incoming call</string>
    <string name="archived_notes">Archived notes</string>
    <string name="archive">Archive</string>
    <string name="upload_by">Upload by</string>
    <string name="h_m_nay">Today</string>
    <string name="details">Details</string>
    <string name="image_name">Image name</string>
    <string name="editor">Editor</string>
    <string name="viewer">Viewer</string>
    <string name="invite">Invite</string>
    <string name="btn_continue_text">Continue</string>
    <string name="default_name">Me</string>
    <string name="send">Send</string>

    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Notification</string>
    <string name="notice">Notice</string>
    <string name="ask_send_image">Send this image?</string>
    <string name="ask_send_video">Send this video?</string>
    <string name="message_content_empty_notice">Please enter message</string>
    <string name="ask_for_delete_note">Are you sure to delete this note?</string>
    <string name="ask_for_delete_member">Are you sure to delete this member?</string>
    <string name="error_can_not_make_call">Can not make a call at the moment</string>
    <string name="phone_number_can_not_be_empty">Phone number can not be empty!</string>
    <string name="missed_call">Missed call</string>
    <string name="you_missed_call_from">You missed call from %s</string>
    <string name="ask_leave_meet">Are you sure to leave this room?</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
</resources>
