<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:orderInCategory="0"
        android:title="@string/pin"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_baseline_archive_24"
        android:orderInCategory="1"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_show_conservation"
        android:icon="@drawable/ic_baseline_message_24"
        android:orderInCategory="2"
        android:title="@string/conservation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="3"
        android:title="@string/save"
        app:showAsAction="always" />
</menu>