<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lttrung.notepro.ui.main.MainActivity">
    <item
        android:id="@+id/action_view_notes"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/placeholder"
        android:title="" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/edit_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>