<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Base.Theme.NotePro.NoActionBar"
    tools:context=".ui.addmember.AddMemberFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/email"
        android:padding="12dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/role_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:spinnerMode="dropdown"
        tools:listitem="@android:layout/list_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        android:textSize="16sp" />

</LinearLayout>