<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    app:cardElevation="16dp"
    app:cardCornerRadius="16dp"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_member"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/full_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_role"
            app:layout_constraintLeft_toRightOf="@+id/img_member"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_member"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/tv_role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_email"
            app:layout_constraintLeft_toLeftOf="@+id/tv_full_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_full_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@id/tv_phone_number"
            app:layout_constraintLeft_toLeftOf="@id/tv_role"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_role" />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            app:layout_constraintBottom_toBottomOf="@id/img_member"
            app:layout_constraintLeft_toLeftOf="@id/tv_email"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>